fix(arc-172): add more whitespace to cards

--- a/src/modules/shared/components/ReadingRoomCard/ReadingRoomCard.module.scss
+++ b/src/modules/shared/components/ReadingRoomCard/ReadingRoomCard.module.scss
@@ -123,6 +123,10 @@ $component: "c-reading-room-card";
 					width: 1px;
 				}
 			}
+
+			@include respond-at("lg") {
+				padding-right: $spacer-2xl;
+			}
 		}
 	}
 
